--- a/demo/views/index.html
+++ b/demo/views/index.html
@@ -5,7 +5,7 @@
   <title>野狗+七牛 图片存储 - JavaScript </title>
   <link href="favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="http://apps.bdimg.com/libs/bootstrap/3.0.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
 
   <!--[if lt IE 9]>
       <script src="js/Respond-1.4.2/respond.min.js"></script>
@@ -61,11 +61,11 @@
 </div>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/plupload/plupload.full.min.js"></script>
+<script type="text/javascript" src="..js/plupload/plupload.full.min.js"></script>
 <script type="text/javascript" src="js/plupload/i18n/zh_CN.js"></script>
-<script type="text/javascript" src="/js/qiniu.js"></script>
-<script type="text/javascript" src="/js/main.js"></script>
-<script type="text/javascript" src="/js/conf.js"></script>
+<script type="text/javascript" src="../js/qiniu.js"></script>
+<script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript" src="../js/conf.js"></script>
 <script src = "https://cdn.wilddog.com/js/client/current/wilddog.js" ></script>
 <script type="text/javascript" src="js/masonry-docs.min.js"></script> 
 
