--- a/demo/views/index.html
+++ b/demo/views/index.html
@@ -63,7 +63,7 @@
 <script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/plupload/plupload.full.min.js"></script>
 <script type="text/javascript" src="js/plupload/i18n/zh_CN.js"></script>
-<script type="text/javascript" src="../js/qiniu.js"></script>
+<script type="text/javascript" src="../../js/qiniu.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
 <script type="text/javascript" src="../js/conf.js"></script>
 <script src = "https://cdn.wilddog.com/js/client/current/wilddog.js" ></script>
