--- a/demo/views/index.html
+++ b/demo/views/index.html
@@ -31,7 +31,7 @@
         WildDog + qiniu  实现图片存储
             <a class="btn btn-default view_github" href="https://github.com/WildDogTeam/demo-js-wildqiniu" target="_blank">
         <img src="http://qtestbucket.qiniudn.com/GitHub-Mark-32px.png">
-        View Source on Github
+        在GitHub上查看源代码
       </a>
     </h1>
         <input type="hidden" id="domain" value="<%= domain %>">
@@ -61,13 +61,13 @@
 </div>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/plupload/plupload.full.min.js"></script>
-<script type="text/javascript" src="js/plupload/i18n/zh_CN.js"></script>
+<script type="text/javascript" src="../../js/plupload/plupload.full.min.js"></script>
+<script type="text/javascript" src="../../js/plupload/i18n/zh_CN.js"></script>
 <script type="text/javascript" src="../../js/qiniu.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
-<script type="text/javascript" src="../js/conf.js"></script>
+<script type="text/javascript" src="../../js/conf.js"></script>
 <script src = "https://cdn.wilddog.com/js/client/current/wilddog.js" ></script>
-<script type="text/javascript" src="js/masonry-docs.min.js"></script> 
+<script type="text/javascript" src="../../js/masonry-docs.min.js"></script> 
 
 </body>
 </html>
