--- a/demo/views/index.html
+++ b/demo/views/index.html
@@ -61,7 +61,7 @@
 </div>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="http://apps.bdimg.com/libs/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="../../js/plupload/plupload.full.min.js"></script>
+<script type="text/javascript" src="../js/plupload/plupload.full.min.js"></script>
 <script type="text/javascript" src="../js/plupload/i18n/zh_CN.js"></script>
 <script type="text/javascript" src="../js/qiniu.js"></script>
 <script type="text/javascript" src="../js/main.js"></script>
